member section and theme changes

--- a/ieeeiemsb/index.html
+++ b/ieeeiemsb/index.html
@@ -496,6 +496,8 @@
     <!-- ===== MEMBERS SLIDESHOW STARTS -->
 
     <section class="pt-5 pb-5 pricing-area">
+
+
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -508,18 +510,52 @@
             </div> <!-- row -->
             <div class="row mt-5">
                 <div class="col-6">
+                    <h3 class="mb-3">Faculty Head</h3>
+                </div>
+                <div class="col-12">
+                    <div id="" class="carousel slide" data-ride="carousel">
+
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+
+                                    <div class="col-md-4 mb-3">
+                                        <div class="">
+                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
+                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
+                                            <div class="card-body text-center">
+                                                <h4 class="card-title">Team Member</h4>
+                                                <p class="card-text">Member Role</p>
+
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-6">
                     <h3 class="mb-3">Executive Committee </h3>
                 </div>
                 <div class="col-6 text-right">
-                    <a class="btn btn-primary mb-3 mr-1" href="#executiveSlideShow" role="button" data-slide="prev">
+                    <a class="btn btn-primary mb-3 mr-1" href="#CoreSlideShow" role="button" data-slide="prev">
                         <i class="fa fa-arrow-left"></i>
                     </a>
-                    <a class="btn btn-primary mb-3 " href="#executiveSlideShow" role="button" data-slide="next">
+                    <a class="btn btn-primary mb-3 " href="#CoreSlideShow" role="button" data-slide="next">
                         <i class="fa fa-arrow-right"></i>
                     </a>
                 </div>
                 <div class="col-12">
-                    <div id="executiveSlideShow" class="carousel slide" data-ride="carousel">
+                    <div id="CoreSlideShow" class="carousel slide" data-ride="carousel">
 
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -792,124 +828,11 @@
                 <div class="col-6">
                     <h3 class="mb-3">Web Developers</h3>
                 </div>
-                <div class="col-6 text-right">
-                    <a class="btn btn-primary mb-3 mr-1" href="#webDevSlideShow" role="button" data-slide="prev">
-                        <i class="fa fa-arrow-left"></i>
-                    </a>
-                    <a class="btn btn-primary mb-3 " href="#webDevSlideShow" role="button" data-slide="next">
-                        <i class="fa fa-arrow-right"></i>
-                    </a>
-                </div>
                 <div class="col-12">
-                    <div id="webDevSlideShow" class="carousel slide" data-ride="carousel">
-
+                    <div id="" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="row">
-
-                                    <div class="col-md-4 mb-3">
-                                        <div class="">
-                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
-                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
-                                            <div class="card-body text-center">
-                                                <h4 class="card-title">Team Member</h4>
-                                                <p class="card-text">Member Role</p>
-
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 mb-3">
-                                        <div class="">
-                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
-                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
-                                            <div class="card-body text-center">
-                                                <h4 class="card-title">Team Member</h4>
-                                                <p class="card-text">Member Role</p>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 mb-3">
-                                        <div class="">
-                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
-                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
-                                            <div class="card-body text-center">
-                                                <h4 class="card-title">Team Member</h4>
-                                                <p class="card-text">Member Role</p>
-
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row">
-
-                                    <div class="col-md-4 mb-3">
-                                        <div class="">
-                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
-                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
-                                            <div class="card-body text-center">
-                                                <h4 class="card-title">Team Member</h4>
-                                                <p class="card-text">Member Role</p>
-
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 mb-3">
-                                        <div class="">
-                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
-                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
-                                            <div class="card-body text-center">
-                                                <h4 class="card-title">Team Member</h4>
-                                                <p class="card-text">Member Role</p>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 mb-3">
-                                        <div class="">
-                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
-                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
-                                            <div class="card-body text-center">
-                                                <h4 class="card-title">Team Member</h4>
-                                                <p class="card-text">Member Role</p>
-
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row">
-
-                                    <div class="col-md-4 mb-3">
-                                        <div class="">
-                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
-                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
-                                            <div class="card-body text-center">
-                                                <h4 class="card-title">Team Member</h4>
-                                                <p class="card-text">Member Role</p>
-
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 mb-3">
-                                        <div class="">
-                                            <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
-                                                    alt="100%x280" src="./assets/images/wman.svg"></div>
-                                            <div class="card-body text-center">
-                                                <h4 class="card-title">Team Member</h4>
-                                                <p class="card-text">Member Role</p>
-
-                                            </div>
-                                        </div>
-                                    </div>
                                     <div class="col-md-4 mb-3">
                                         <div class="">
                                             <div class='member-dp mt-2'><img class="img-fluid rounded-circle"
